gobmkida/c0/do_owl_defend
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_owl_defend/src/engine/owl.c:2338:38: error: use of undeclared identifier 'unk_4E4177'
read_function_name = ( const char *)&unk_4E4177; 
                                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_owl_defend/src/obj/1/owl.o] Error 1
